# tech_challenge_1_fiap_mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  et --soft c7e533910b43e597edfdf5facf79e8078d60be8cqq  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
churn_telecom/: __init__.py  config.py  plots.py
churn_telecom/models/: evaluation.py  expirement.py  mlp.py  trainer.py
data/interim/: telco_cleaned.parquet  telco_droped.parquet  telco_features.parquet  telco_typed.parquet
data/processed/: features.npy  target.npy  test.npy  test.parquet  train.npy  train.parquet
docs/: ANALISE FINAL CONSOLIDADA 2.md  ANALISE FINAL CONSOLIDADA.md  API_REFERENCE.md  analise_0.00_vab_project_descrition.md  analise_0.01_vab_data_source.md  analise_0.02_vab_eda_univariate.md  analise_0.03_vab_eda_bivariate.md  analise_0.04_vab_eda_multivariate.md  analise_1.01_vab_data_cleaning.md  analise_1.02_vab_feature_engineering.md  analise_1.03_vab_preprocessing.md  analise_3_baseline.md  analise_4.01_vab_baseline_mlp.md  analise_eda.md  analise_etapa_2_mlp.md  deploy_architecture.md  descrição de features.md  metricas_tecnicas_negocios.md  ml canvas metricas.md  ml_canvas.md  model_card.md  monitoring_plan.md  pipeline_data_to_baseline.html  prd_etapa_2.md  report_eda.md  tradeoff custo fp fp.md
models/: MLP_baseline.pt  MLP_posweight_alto.pt  MLP_recall_otimizado.pt  best_mlp_etapa2.pt  best_model_mlp.pt  model_comparison_etapa2.csv  preprocessor.pkl  run_comparison_etapa2.csv
models/checkpoints/: best_mlp.pt
notebooks/: 0.01_vab_data_source.ipynb  0.02_vab_eda_univariate.ipynb  0.03_vab_eda_bivariate.ipynb  0.04_vab_eda_multivariate.ipynb  0.1_data_overview.ipynb  04_optuna_otimizacao.ipynb  05_mlp_optuna_unificado.ipynb  05_optuna_unificado.ipynb  05_optuna_unificado_final.ipynb  1.01_vab_data_cleaning.ipynb  1.02_vab_feature_engineering.ipynb  1.03_vab_preprocessing.ipynb  1_vab_eda.ipynb  2_vab_preprocessing.ipynb  3.01_vab_baseline_dummy.ipynb  3.01_vab_baseline_dummy_v2.ipynb  3.02_vab_baseline_logistic.ipynb  3.02_vab_baseline_logistic_v2.ipynb  3_vab_baselines_unificado.ipynb  4.01_vab_treinamento_mlp.ipynb  4.02_mlp_otimizacao.ipynb  4.03_mlp_otimizacao.ipynb  4_vab_mlp_vs_baselines.ipynb  churn_mlp_best.pt  churn_pytorch.ipynb  mlflow.db
notebooks/models/checkpoints/: best_mlp.pt
references/: references.md
reports/figures/multivariada/correlacao/: vif_table.csv
reports/json/: models_comparison_table.json  optuna_best_params.json  winner_model_report.json
src/: __init__.py  config.py  main.py  train_mlp.py
src/api/: middleware.py  predictor.py  router.py  schemas.py
src/data/: features.py  preprocessing.py
src/models/: experiment.py  mlp.py  mlp2.py  trainer.py
src/utils/: business.py  plots.py
tests/: conftest.py  test_api.py  test_etapa2.py  test_evaluation.py  test_features.py  test_main.py  test_mlp.py  test_mlp2.py  test_predictor.py  test_preprocessing.py  test_schema.py  test_smoke.py  test_train_mlp.py  test_trainer.py
