[project]
name = "churn-prediction"
version = "0.1.0"
description = "Churn prediction for telecom"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.0.0,<4.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "cloudpickle>=3.0.0",
    "waitress>=3.0.0",
    "ipykernel>=6.0.0",
    "optuna>=4.8.0",
    "jupyterlab>=4.5.6",
    "ipywidgets>=8.1.8",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "pylance>=4.0.0",
    "imbalanced-learn>=0.14.1",
    "ruff>=0.15.10",
    "nbstripout>=0.9.1",
    "torch>=2.11.0",
    "setuptools>=81.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["churn_telecom*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
