[project]
name = "churn-prediction"
version = "0.1.0"
description = "Churn prediction for telecom"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

authors = [
    {name = "Victor Araújo Barros", email = "victor.seabra.ba@gmail.com"}
]

keywords = ["churn", "prediction", "telecom", "machine-learning", "api", "fastapi"]

dependencies = [
    "mlflow>=3.0.0,<4.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "cloudpickle>=3.0.0",
    "waitress>=3.0.0",
    "ipykernel>=6.0.0",
    "optuna>=4.8.0",
    "jupyterlab>=4.5.6",
    "ipywidgets>=8.1.8",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
    "pylance>=4.0.0",
    "imbalanced-learn>=0.14.1",
    "nbstripout>=0.9.1",
    "torch>=2.11.0",
    "setuptools>=81.0.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/leonflicts42/tech_challenge_1_fiap_mlops"
Repository = "https://github.com/leonflicts42/tech_challenge_1_fiap_mlops#readme"
Issues = "https://github.com/leonflicts42/tech_challenge_1_fiap_mlops/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pandera>=0.31.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::sklearn.exceptions.InconsistentVersionWarning",
    "ignore::DeprecationWarning:starlette",
]

[tool.taskipy.tasks]
# Rodar o linter para verificar erros
lint = "ruff check ."
# Rodar o linter para verificar erros e corrigir
lint-fix = "ruff check --fix ."
# Formatar o código automaticamente
format = "ruff format ."
# Formatar o código automaticamente e corrigir
format-check = "ruff format . --check"
# Rodar os testes
test = "pytest -v"
# Rodar testes com relatório de cobertura
post_test = "pytest --cov=src -v"
# Rodar a aplicação principal
run = "python app.py"
precommit = "task lint && task format && task test"
